--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@
     - pip install -r requirements.txt
 # command to run tests
   script:
-    - nosetests test_yummy_recipes.py
+    - nosetests app/test_yummy_recipes.py
