--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,14 @@ certifi==2017.7.27.1
 chardet==3.0.4
 click==6.7
 coverage==4.0.3
+decorator==4.1.2
 Flask==0.12.2
 Flask-Login==0.4.0
 Flask-Mail==0.9.1
 Flask-OpenID==1.2.5
 Flask-Testing==0.6.2
 Flask-WTF==0.14.2
+gunicorn==19.7.1
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.9.6
